:adhesive_bandage: [fix]: List 반환시 변경 불가능하도록 수정